tests/fixtures/guardrails/invalid/route-shadowed-imported-binding-bypass/app/routes/products.ts
import { runProductPreview } from "~/app/services/products.server";

void runProductPreview;

export async function loader(runProductPreview) {
  return runProductPreview();
}
